class Moq {
  int moqId;
  int storeId;
  int ingredientId;
  int amount;
  String units;
  DateTime lastUpdated;

  Moq({
    required this.moqId,
    required this.storeId,
    required this.ingredientId,
    required this.amount,
    required this.units,
    required this.lastUpdated,
  });
}
